[CSS] fix purchase tickets page misalignments (#3165)

--- a/app/components/shared/Subtitle/Subtitle.module.css
+++ b/app/components/shared/Subtitle/Subtitle.module.css
@@ -15,6 +15,7 @@
 @media screen and (max-width: 1179px) {
   .tabbedPageSubtitle {
     margin-left: 0;
+    width: 667px;
   }
 }
 
