--- a/app/style/MyTickets.less
+++ b/app/style/MyTickets.less
@@ -152,3 +152,12 @@
   padding: 16px 20px;
   background-color: var(--sidebar-color);
 }
+
+@media screen and (max-width: 1179px) {
+  .my-tickets-charts {
+    width: 667px;
+    .metered-ticks-area {
+      margin-left: 60px;
+    }
+  }
+}
